update gitignore and file paths

--- a/chaiibaseline.ipynb
+++ b/chaiibaseline.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "91f33cf7-7464-4c2b-a18b-2a1b66929f86",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
     "# output_dir = '/kaggle/output/kaggle/working/'\n",
     "\n",
     "\n",
-    "data_dir = '/home/ubuntu/MLpractice/chaii/'\n",
+    "data_dir = '/home/ubuntu/repo/chaii4deeplearningkaggler/data/'\n",
     "output_dir = data_dir+'outputs/'\n",
     "\n",
     "train_fn = 'train.csv'\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "1a6035b4-207d-460c-9eb4-cec576060212",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4ee9f8a5-7c45-4c26-a7c1-dfca95736502",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e5dca1ab-36ea-4cb0-92d2-8fb7804e8f20",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2ff87e26-3fcc-4ea7-8a92-249cff730a51",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "4                   சூரியனும்           585    tamil         594  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d3dcc648-4434-4bad-a72e-a88686d8963a",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "a3eb1f96-33b8-4379-b3c4-2356c1e73839",
    "metadata": {},
    "outputs": [],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b22805b0-d882-4b04-99e3-b7bf173392a6",
    "metadata": {},
    "outputs": [
@@ -308,10 +308,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at ai4bharat/indic-bert were not used when initializing AlbertForQuestionAnswering: ['predictions.LayerNorm.bias', 'predictions.decoder.weight', 'predictions.dense.bias', 'predictions.dense.weight', 'predictions.LayerNorm.weight', 'sop_classifier.classifier.bias', 'sop_classifier.classifier.weight', 'predictions.bias', 'predictions.decoder.bias']\n",
+      "Some weights of the model checkpoint at ai4bharat/indic-bert were not used when initializing AlbertForQuestionAnswering: ['predictions.bias', 'predictions.dense.weight', 'predictions.LayerNorm.weight', 'predictions.decoder.bias', 'predictions.decoder.weight', 'predictions.LayerNorm.bias', 'sop_classifier.classifier.weight', 'sop_classifier.classifier.bias', 'predictions.dense.bias']\n",
       "- This IS expected if you are initializing AlbertForQuestionAnswering from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing AlbertForQuestionAnswering from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of AlbertForQuestionAnswering were not initialized from the model checkpoint at ai4bharat/indic-bert and are newly initialized: ['qa_outputs.weight', 'qa_outputs.bias']\n",
+      "Some weights of AlbertForQuestionAnswering were not initialized from the model checkpoint at ai4bharat/indic-bert and are newly initialized: ['qa_outputs.bias', 'qa_outputs.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "4139b10c-579f-4c53-843c-39485105f4af",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
      "output_type": "stream",
      "text": [
       "number of vocab our tokenizer have 200000\n",
-      "printing ... few **vocab** ['▁ബന്ധത്തിന്', '▁நீடித்து', 'தொழில்', 'ത്തിനെ', 'ASA', '▁ಹೊಳಪ', 'ਨੀਮ', 'ில்லாத', '▁రాజ్యాంగ', '▁मनाने'] and their **index** [186704, 122481, 124545, 40706, 196476, 133778, 131786, 57121, 35724, 23530]\n"
+      "printing ... few **vocab** ['▁পুঁজিবাদ', 'ുന്തോറും', '▁spur', 'వులను', '▁পদক্ষেপের', '▁ઓફીસ', '▁பலத்த', '▁বাংলাদেশিদের', 'ിലാ', '▁பொறி'] and their **index** [158243, 160427, 62651, 173786, 118925, 86150, 27947, 48624, 96248, 70064]\n"
      ]
     }
    ],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "9d226603-7a85-4700-b551-ebb648e36cac",
    "metadata": {},
    "outputs": [],
@@ -376,14 +376,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "05aa8a09-6d19-4a4c-9abb-ebeba892fac8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe677703eed14815afc8cb69ab804736",
+       "model_id": "5f6cb453bc924813b10ea014b0db59be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -397,7 +397,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "753fa45da5d74dfbb08cc6cb2ba45c78",
+       "model_id": "80ed7cc6a3d64f359afb748ac0c03d79",
        "version_major": 2,
        "version_minor": 0
       },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "d7c34a7b-cbba-487c-af00-f08045747909",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "f82b765d-0935-43b7-b2ab-ea0811cc548e",
    "metadata": {},
    "outputs": [
@@ -465,46 +465,46 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
-       "      <td>8</td>\n",
-       "      <td>56</td>\n",
-       "      <td>[2, 101249, 108386, 20, 33534, 32, 129, 39555,...</td>\n",
-       "      <td>0</td>\n",
+       "      <td>57</td>\n",
+       "      <td>534</td>\n",
+       "      <td>[2, 23269, 1134, 4761, 11611, 8430, 1134, 68, ...</td>\n",
+       "      <td>44</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
-       "      <td>450</td>\n",
-       "      <td>989</td>\n",
-       "      <td>[2, 154688, 32, 216, 59424, 670, 12, 18654, 50...</td>\n",
-       "      <td>441</td>\n",
+       "      <td>124</td>\n",
+       "      <td>396</td>\n",
+       "      <td>[2, 1209, 19080, 20, 68508, 154664, 216, 79460...</td>\n",
+       "      <td>109</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
-       "      <td>988</td>\n",
-       "      <td>217</td>\n",
-       "      <td>[2, 8, 109272, 845, 5448, 5448, 8, 137418, 129...</td>\n",
-       "      <td>983</td>\n",
+       "      <td>555</td>\n",
+       "      <td>873</td>\n",
+       "      <td>[2, 3039, 9691, 5458, 25397, 1976, 1883, 130, ...</td>\n",
+       "      <td>527</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
-       "      <td>417</td>\n",
-       "      <td>1107</td>\n",
-       "      <td>[2, 5929, 25019, 18654, 148342, 3143, 26357, 1...</td>\n",
-       "      <td>405</td>\n",
+       "      <td>1084</td>\n",
+       "      <td>378</td>\n",
+       "      <td>[2, 1500, 10495, 1301, 6511, 1883, 1539, 494, ...</td>\n",
+       "      <td>1075</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...</td>\n",
-       "      <td>91</td>\n",
-       "      <td>615</td>\n",
-       "      <td>[2, 5929, 25019, 32721, 339, 63182, 6342, 2092...</td>\n",
-       "      <td>81</td>\n",
+       "      <td>8</td>\n",
+       "      <td>725</td>\n",
+       "      <td>[2, 1883, 11339, 25272, 65990, 1546, 1134, 188...</td>\n",
+       "      <td>5</td>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -513,28 +513,28 @@
       ],
       "text/plain": [
        "                                      attention_mask  end_positions  \\\n",
-       "0  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...              8   \n",
-       "1  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            450   \n",
-       "2  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            988   \n",
-       "3  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            417   \n",
-       "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...             91   \n",
+       "0  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...             57   \n",
+       "1  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            124   \n",
+       "2  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...            555   \n",
+       "3  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...           1084   \n",
+       "4  [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, ...              8   \n",
        "\n",
        "   example_id                                          input_ids  \\\n",
-       "0          56  [2, 101249, 108386, 20, 33534, 32, 129, 39555,...   \n",
-       "1         989  [2, 154688, 32, 216, 59424, 670, 12, 18654, 50...   \n",
-       "2         217  [2, 8, 109272, 845, 5448, 5448, 8, 137418, 129...   \n",
-       "3        1107  [2, 5929, 25019, 18654, 148342, 3143, 26357, 1...   \n",
-       "4         615  [2, 5929, 25019, 32721, 339, 63182, 6342, 2092...   \n",
+       "0         534  [2, 23269, 1134, 4761, 11611, 8430, 1134, 68, ...   \n",
+       "1         396  [2, 1209, 19080, 20, 68508, 154664, 216, 79460...   \n",
+       "2         873  [2, 3039, 9691, 5458, 25397, 1976, 1883, 130, ...   \n",
+       "3         378  [2, 1500, 10495, 1301, 6511, 1883, 1539, 494, ...   \n",
+       "4         725  [2, 1883, 11339, 25272, 65990, 1546, 1134, 188...   \n",
        "\n",
        "   start_positions                                     token_type_ids  \n",
-       "0                0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "1              441  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "2              983  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "3              405  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
-       "4               81  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  "
+       "0               44  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "1              109  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "2              527  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "3             1075  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  \n",
+       "4                5  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "63b0868a-16df-4097-b72a-a6ca53d4ca5e",
    "metadata": {},
    "outputs": [],
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "2da5ee2e-6d03-4949-ac6d-f13786684237",
    "metadata": {},
    "outputs": [],
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "d7a0fee9-7919-457c-a82f-3528a5da49d6",
    "metadata": {},
    "outputs": [],
@@ -685,14 +685,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "6400f3e5-1a10-4313-bad0-8be087d1f68a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1847544c4e124fbe90967ee5beb8846d",
+       "model_id": "a58fe9bb7f754841b362befc894e98b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -707,32 +707,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "training loss for epoch 0 is 6.055774544467445\n",
-      "valid loss is 6.051880246117001 and jaccard score is 0.047619047619047616\n",
-      "training loss for epoch 1 is 5.867546217782157\n",
-      "valid loss is 5.9865341413588755 and jaccard score is 0.051587301587301584\n",
-      "training loss for epoch 2 is 5.7922877944818065\n",
-      "valid loss is 5.991115547361828 and jaccard score is 0.0492063492063492\n",
-      "training loss for epoch 3 is 5.721992192148161\n",
-      "valid loss is 5.998061293647403 and jaccard score is 0.037301587301587294\n",
-      "training loss for epoch 4 is 5.547430463197853\n",
-      "valid loss is 5.931888920920236 and jaccard score is 0.027777777777777773\n",
-      "training loss for epoch 5 is 5.195108227369164\n",
-      "valid loss is 6.040142899467831 and jaccard score is 0.07142857142857142\n",
-      "training loss for epoch 6 is 4.781257643419154\n",
-      "valid loss is 6.143173399425688 and jaccard score is 0.07539682539682539\n",
-      "training loss for epoch 7 is 4.109207505939388\n",
-      "valid loss is 6.405101367405483 and jaccard score is 0.05714285714285714\n",
-      "training loss for epoch 8 is 3.5669702041048965\n",
-      "valid loss is 6.49231295358567 and jaccard score is 0.0984126984126984\n",
-      "training loss for epoch 9 is 2.9115529794152044\n",
-      "valid loss is 6.696340197608585 and jaccard score is 0.10476190476190476\n",
-      "training loss for epoch 10 is 2.3716842820163535\n",
-      "valid loss is 6.683241776057652 and jaccard score is 0.10476190476190476\n",
-      "training loss for epoch 11 is 2.118087765048532\n",
-      "valid loss is 6.773041384560721 and jaccard score is 0.05714285714285714\n",
-      "training loss for epoch 12 is 1.844957354439407\n",
-      "valid loss is 7.23516457421439 and jaccard score is 0.073015873015873\n"
+      "training loss for epoch 0 is 5.948097802009903\n",
+      "valid loss is 5.945135411762056 and jaccard score is 0.08412698412698412\n"
      ]
     }
    ],
@@ -742,10 +718,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "a3edd03b-bb36-44e6-9a5e-2ed12b2ae1b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d2ca811dbddc4d999fe2f8a8037a4312",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "texample_id2idx = { eid:idx for idx,eid in enumerate(test_df['id'].values)}\n",
     "texample_idx2id = { idx:eid for idx,eid in enumerate(test_df['id'].values)}\n",
@@ -771,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "d9447c15-9f39-450a-8879-661e595b9c16",
    "metadata": {},
    "outputs": [],
@@ -795,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "eae9de52-b108-468e-821a-daebbafd4ab9",
    "metadata": {},
    "outputs": [],
@@ -809,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a16eea2a-a420-4b45-86f2-dd0cfabcf124",
    "metadata": {},
    "outputs": [],
